--- a/src/main/resources/templates/common/headeradmin.html
+++ b/src/main/resources/templates/common/headeradmin.html
@@ -121,6 +121,15 @@
             </a>       
           </li>
           <li class="nav-item has-treeview">
+            <a th:href="@{/admin/QuanLyNhaCungCap/DanhSach}" class="nav-link">
+              <i class="nav-icon fas fa-tree"></i>
+              <p>
+                Quản lý Nhà Cung Cấp
+                <i class="fas fa-angle-left right"></i>
+              </p>
+            </a>
+          </li>
+          <li class="nav-item has-treeview">
             <a th:href="@{/admin/QuanLyDonHang/DanhSach}" class="nav-link">
               <i class="nav-icon fas fa-edit"></i>
               <p>
