--- a/src/main/resources/templates/admin/provider/list.html
+++ b/src/main/resources/templates/admin/provider/list.html
@@ -47,13 +47,14 @@
               <table id="example1" class="table table-bordered table-striped">
                 <thead>
                 <tr>
-                  <th th:text="#{id}"></th>
-                  <th>Tên Danh Mục</th>
-                  <th th:text="#{name}" ></th>
-                  <th th:text="#{createdby}"></th>
-                  <th th:text="#{createddate}"></th>
-                  <th th:text="#{modifiedby}"></th>
-                  <th th:text="#{modifieddate}"></th>
+                  <th>Id</th>
+                  <th>Tên NCC</th>
+                  <th>Phone</th>
+                  <th>Address</th>
+                  <th>Người thêm</th>
+                  <th>Ngày tạo</th>
+                  <th>Người sửa</th>
+                  <th>Ngày sửa</th>
                   <th th:text="#{manipulation}"></th>                 
                 </tr>
                 </thead>
@@ -64,11 +65,12 @@
                   <td th:text="${provider.id}"></td>
                   <td th:text="${provider.name}"></td>
                   <td th:text="${provider.phone}"></td>
+                  <td th:text="${provider.address}"></td>
                   <td th:text="${provider.createdBy}"></td>
                   <td th:text="${#dates.format(provider.createdDate, 'HH:mm dd-MM-yyyy')}"></td>
                   <td th:text="${provider.modifiedBy}"></td>
                   <td th:text="${#dates.format(provider.modifiedDate, 'HH:mm dd-MM-yyyy')}"></td>
-                  <td> <a th:href="@{'/admin/QuanlyNhaCungCap/Sua/' + ${provider.id}}">Sửa</a> <a th:href="@{'/admin/QuanlyNhaCungCap/Xoa/' + ${provider.id}}">Xóa</a>  </td>
+                  <td> <a th:href="@{'/admin/QuanLyNhaCungCap/Sua/' + ${provider.id}}">Sửa</a> <a th:href="@{'/admin/QuanLyNhaCungCap/Xoa/' + ${provider.id}}">Xóa</a>  </td>
                 </tr>
                </tbody>
                 
