commit css Phương

--- a/src/main/resources/templates/common/footeradmin.html
+++ b/src/main/resources/templates/common/footeradmin.html
@@ -1,9 +1,9 @@
 <div th:fragment="footer">
     <footer class="main-footer">
-    <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong>
-    All rights reserved.
+    <strong>LTNC 20202 NHOM 11</strong>
+
     <div class="float-right d-none d-sm-inline-block">
-      <b>Version</b> 3.0.2-pre
+      <b>Nguyen Anh Tuan - Tong Quynh Phuong</b>
     </div>
   </footer>
 
