--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -7,24 +7,14 @@
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="contactinfo">
-							<ul class="nav nav-pills">
-								<li><a href="#"><i class="fa fa-phone"></i>0935050235</a></li>
+							<ul class="nav nav-pills" style="color: #D57E67">
+								<li><a href="#" ><i class="fa fa-phone"></i>Chào mừng bạn đến với Thật Fruit|Hotline:0123456789</a></li>
 								<li><a href="#"><i class="fa fa-envelope"></i>
-										anhtienzzxx@gmail.com</a></li>
+										fruit@gmail.com</a></li>
 							</ul>
 						</div>
 					</div>
-					<div class="col-sm-6">
-						<div class="social-icons pull-right">
-							<ul class="nav navbar-nav">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-							</ul>
-						</div>
-					</div>
+
 				</div>
 			</div>
 		</div>
@@ -41,10 +31,10 @@
 					</div>
 					<div class="col-md-8 clearfix">
 						<div class="shop-menu clearfix pull-right">
-							<ul class="nav navbar-nav">														
-								<li th:if="${authentication == null}"><a th:href="@{/register}"><i class="fa fa-crosshairs"></i>
+							<ul class="nav nav-pills" >
+								<li th:if="${authentication == null}"><a th:href="@{/register}"><i class="fa fa-user"></i>
 										Đăng kí</a></li>					
-								<li th:if="${authentication == null}"><a th:href="@{/login}"><i class="fa fa-lock"></i>
+								<li th:if="${authentication == null}"><a th:href="@{/login}"><i class="fa fa-user"></i>
 										Đăng nhập</a></li>
 										
 								<li><a th:href="@{/cart/view}"><i class="fa fa-shopping-cart"></i>
@@ -74,11 +64,23 @@
 						</div>
 						<div class="mainmenu pull-left">
 							<ul class="nav navbar-nav collapse navbar-collapse">
-								<li><a href="index.html" class="active">Trang Chủ</a></li>							
-								<li class="dropdown"><a href="#">Tin tức<i
-										class="fa fa-angle-down"></i></a>									
-								</li>								
-								<li><a href="contact-us.html">Thông tin</a></li>
+								<li><a href="index.html" class="active">Trang Chủ</a></li>
+								<li class="nav-item dropdown">
+									<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">TRÁI CÂY TƯƠI</a>
+									<div class="dropdown-menu">
+										<ul class="list-group list-group-flush">
+											<li class="list-group-item"><a href="../html/cherry.html">Cherry</a></li>
+											<li class="list-group-item">Nho</li>
+											<li class="list-group-item">Táo</li>
+											<li class="list-group-item">Lê</li>
+										</ul>
+									</div>
+								</li>
+								<li><a href="../common/giotraicay.html">GIỎ TRÁI CÂY</a></li>
+								<li><a href="">NƯỚC DETOX</a></li>
+								<li><a href="">TIN TỨC</a></li>
+								<li><a href="">LIÊN HỆ</a></li>
+
 							</ul>
 						</div>
 					</div>
