--- a/src/main/resources/templates/admin/account/formAdd.html
+++ b/src/main/resources/templates/admin/account/formAdd.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="col-sm-6">
 							<ol class="breadcrumb float-sm-right">
-								<li class="breadcrumb-item"><a href="#">Tiên Huỳnh</a></li>
+								<li class="breadcrumb-item"><a href="#">Fruit</a></li>
 								<li class="breadcrumb-item active">General Form</li>
 							</ol>
 						</div>
