--- a/src/main/resources/templates/common/headeradmin.html
+++ b/src/main/resources/templates/common/headeradmin.html
@@ -55,7 +55,7 @@
     <a href="index3.html" class="brand-link">
       <img th:src="@{/Backend/dist/img/AdminLTELogo.png}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
            style="opacity: .8">
-      <span class="brand-text font-weight-light">AdminLTE 3</span>
+      <span class="brand-text font-weight-light">Admin</span>
     </a>
 
     <!-- Sidebar -->
@@ -63,10 +63,10 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img th:src="@{/Backend/dist/img/user2-160x160.jpg}" class="img-circle elevation-2" alt="User Image">
+          <img th:src="@{/Frontend/images/BANER1.jpg}" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Alexander Pierce</a>
+          <a href="#" class="d-block">Nhom 11</a>
         </div>
       </div>
 
