--- a/src/main/resources/templates/common/slider.html
+++ b/src/main/resources/templates/common/slider.html
@@ -1,68 +1,44 @@
 <div th:fragment="slider">
-   <section id="slider"><!--slider-->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<div id="slider-carousel" class="carousel slide" data-ride="carousel">
-						<ol class="carousel-indicators">
-							<li data-target="#slider-carousel" data-slide-to="0" class="active"></li>
-							<li data-target="#slider-carousel" data-slide-to="1"></li>
-							<li data-target="#slider-carousel" data-slide-to="2"></li>
-						</ol>
-						
-						<div class="carousel-inner">
-							<div class="item active">
-								<div class="col-sm-6">
-									<h1><span>E</span>-SHOPPER</h1>
-									<h2>Free E-Commerce Template</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-									<button type="button" class="btn btn-default get">Get it now</button>
-								</div>
-								<div class="col-sm-6">
-									<img th:src="@{/Frontend/images/home/girl1.jpg}" class="girl img-responsive" alt="" />
-									<img th:src="@{/Frontend/images/home/pricing.png}"  class="pricing" alt="" />
-								</div>
-							</div>
-							<div class="item">
-								<div class="col-sm-6">
-									<h1><span>E</span>-SHOPPER</h1>
-									<h2>100% Responsive Design</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-									<button type="button" class="btn btn-default get">Get it now</button>
-								</div>
-								<div class="col-sm-6">
-									<img th:src="@{/Frontend/images/home/girl2.jpg}" class="girl img-responsive" alt="" />
-									<img th:src="@{/Frontend/images/home/pricing.png}"  class="pricing" alt="" />
-								</div>
-							</div>
-							
-							<div class="item">
-								<div class="col-sm-6">
-									<h1><span>E</span>-SHOPPER</h1>
-									<h2>Free Ecommerce Template</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-									<button type="button" class="btn btn-default get">Get it now</button>
-								</div>
-								<div class="col-sm-6">
-									<img th:src="@{/Frontend/images/home/girl3.jpg}" class="girl img-responsive" alt="" />
-									<img th:src="@{/Frontend/images/home/pricing.png}" class="pricing" alt="" />
-								</div>
-							</div>
-							
-						</div>
-						
-						<a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">
-							<i class="fa fa-angle-left"></i>
+    <section id="slider"><!--slider-->
+        <div id="demo" class="carousel slide" data-ride="carousel" style="padding-top: 0px;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <!-- Indicators -->
+                        <ul class="carousel-indicators">
+                            <li data-target="#demo" data-slide-to="0" class="active"></li>
+                            <li data-target="#demo" data-slide-to="1"></li>
+                            <li data-target="#demo" data-slide-to="2"></li>
+                        </ul>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img th:src="@{/Frontend/images/slide4.jpg}" alt="Cheery">
+                            </div>
+                            <div class="carousel-item ">
+                                <img th:src="@{/Frontend/images/slide1.jpg}" alt="Nho">
+                            </div>
+                            <div class="carousel-item">
+                                <img th:src="@{/Frontend/images/slide2.jpg}" alt="Nhotim">
+                            </div>
+                        </div>
+
+
+                        <!-- The slideshow -->
+
+
+                        <!-- Left and right controls -->
+						<a class="carousel-control-prev" href="#demo" data-slide="prev">
+							<span class="carousel-control-prev-icon"></span>
 						</a>
-						<a href="#slider-carousel" class="right control-carousel hidden-xs" data-slide="next">
-							<i class="fa fa-angle-right"></i>
+						<a class="carousel-control-next" href="#demo" data-slide="next">
+							<span class="carousel-control-next-icon"></span>
 						</a>
-					</div>
-					
-				</div>
-			</div>
-		</div>
-	</section><!--/slider-->
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!--/slider-->
 
 
 </div>
