--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -24,21 +24,21 @@
                 <h2>Brands</h2>
                 <div class="brands-name">
                     <ul class="nav nav-pills nav-stacked">
-                        <li><a href=""> <span class="pull-right">(50)</span>Acne
+                        <li><a href=""> <span class="pull-right">(50)</span>Nhãn Lồng Hưng Yên
                         </a></li>
-                        <li><a href=""> <span class="pull-right">(56)</span>Grüne
-                            Erde
+                        <li><a href=""> <span class="pull-right">(56)</span> Thanh Long Bình Thuận
+
                         </a></li>
-                        <li><a href=""> <span class="pull-right">(27)</span>Albiro
+                        <li><a href=""> <span class="pull-right">(27)</span>Vải Thiều Thanh Hà
                         </a></li>
-                        <li><a href=""> <span class="pull-right">(32)</span>Ronhill
+                        <li><a href=""> <span class="pull-right">(32)</span> Bưởi Năm Roi
                         </a></li>
-                        <li><a href=""> <span class="pull-right">(5)</span>Oddmolly
+                        <li><a href=""> <span class="pull-right">(5)</span>Quýt Hồng Lai Vung
                         </a></li>
-                        <li><a href=""> <span class="pull-right">(9)</span>Boudestijn
+                        <li><a href=""> <span class="pull-right">(9)</span>Na Lạng Sơn
                         </a></li>
-                        <li><a href=""> <span class="pull-right">(4)</span>Rösch
-                            creative culture
+                        <li><a href=""> <span class="pull-right">(4)</span>Cam Cao Phong
+
                         </a></li>
                     </ul>
                 </div>
@@ -57,13 +57,14 @@
             </div>
             <!--/price-range-->
 
-            <div class="shipping text-center">
+            <div class="shipping text-center" style="height: 300px; background-color: white">
                 <!--shipping-->
-                <img th:src="@{/Frontend/images/shipping.jpg}" alt="" />
+                <img th:src="@{/Frontend/images/mua.jpg}" alt="" style="height: 250px;padding-top: 25px"/>
             </div>
             <!--/shipping-->
 
         </div>
+        <div th:replace="common/footer :: footer"></div>
     </div>
 
 </div>
