--- a/src/main/resources/templates/home1.html
+++ b/src/main/resources/templates/home1.html
@@ -54,7 +54,7 @@
                             <div class="col" style="padding-top: 40px">
                                 <img th:src="@{/Frontend/images/flash1.jpg}" alt="" width="200px">
                                 <a href="">
-                                    <h6>Nho Adora Uc</h6>
+                                    <h6>Nho Ninh Thuận</h6>
                                 </a>
                                 <h6>92500₫/1kg</h6>
 
@@ -65,11 +65,11 @@
                                 </div>
                             </div>
                             <div class="col" style="padding-top: 40px;padding-left: 5px">
-                                <img th:src="@{/Frontend/images/flash1.jpg}" alt="" width="200px">
+                                <img th:src="@{/Frontend/images/lecheeky.jpg}" alt="" width="200px">
                                 <a href="">
-                                    <h6>Nho Adora Uc</h6>
+                                    <h6>Lê Hà Giang </h6>
                                 </a>
-                                <h6>92500₫/1kg</h6>
+                                <h6>60000₫/1kg</h6>
 
                                 <div class="add" style="padding-top: 10px;padding-left: 5px">
                                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -78,11 +78,11 @@
                                 </div>
                             </div>
                             <div class="col" style="padding-top: 40px">
-                                <img th:src="@{/Frontend/images/flash1.jpg}" alt="" width="200px">
+                                <img th:src="@{/Frontend/images/taocosmic.jpg}" alt="" width="200px">
                                 <a href="">
-                                    <h6>Nho Adora Uc</h6>
+                                    <h6>Táo Yên Bái</h6>
                                 </a>
-                                <h6>92500₫/1kg</h6>
+                                <h6>70000₫/1kg</h6>
 
                                 <div class="add" style="padding-top: 10px;padding-left: 5px">
                                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -91,9 +91,9 @@
                                 </div>
                             </div>
                             <div class="col" style="padding-top: 40px">
-                                <img th:src="@{/Frontend/images/flash1.jpg}" alt="" width="200px">
+                                <img th:src="@{/Frontend/images/flash2.jpg}" alt="" width="200px">
                                 <a href="">
-                                    <h6>Nho Adora Uc</h6>
+                                    <h6>Kiwwi</h6>
                                 </a>
                                 <h6>92500₫/1kg</h6>
 
@@ -182,10 +182,11 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 
-<div th:replace="common/footer :: footer"></div>
+
 <script th:src="@{/Frontend/js/jquery.js}"></script>
 <script th:src="@{/Frontend/js/price-range.js}"></script>
 <script th:src="@{/Frontend/js/jquery.scrollUp.min.js}"></script>
