--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -1,82 +1,68 @@
 <div th:fragment="footer" >
-	<footer id="footer">
-		<div class="footer-top">
+	<div class="container-fluid">
+	<footer id="footer" style="background-color: white">
+		<div class="footer-top" >
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-2">
+					<div class="col-sm-3">
 						<div class="companyinfo">
 							<h2>
-								<span>e</span>-shopper
+								<span> ThatFruit</span>
 							</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing
-								elit,sed do eiusmod tempor</p>
+							<p>Đăng kí nhận ưu đãi mới nhất từ chúng tôi</p>
 						</div>
 					</div>
-					<div class="col-sm-7">
+					<div class="col-sm-9">
 						<div class="col-sm-3">
 							<div class="video-gallery text-center">
 								<a href="#">
-									<div class="iframe-img">
-										<img src="images/home/iframe1.png" alt="" />
+									<div class="iframe-img" style="height: 100px" >
+										<img th:src="@{/Frontend/images/gio2.jpg}" alt="" />
 									</div>
-									<div class="overlay-icon">
-										<i class="fa fa-play-circle-o"></i>
-									</div>
+
 								</a>
-								<p>Circle of Hands</p>
-								<h2>24 DEC 2014</h2>
+								<p>Giỏ trái cây </p>
+								<h2>April 2021</h2>
 							</div>
 						</div>
 
 						<div class="col-sm-3">
 							<div class="video-gallery text-center">
 								<a href="#">
-									<div class="iframe-img">
-										<img src="images/home/iframe2.png" alt="" />
+									<div class="iframe-img" style="height: 100px">
+										<img th:src="@{/Frontend/images/gio3.jpg}" alt="" />
 									</div>
-									<div class="overlay-icon">
-										<i class="fa fa-play-circle-o"></i>
-									</div>
+
 								</a>
-								<p>Circle of Hands</p>
-								<h2>24 DEC 2014</h2>
+								<p>Giỏ trái cây </p>
+								<h2>April 2021</h2>
 							</div>
 						</div>
 
 						<div class="col-sm-3">
 							<div class="video-gallery text-center">
 								<a href="#">
-									<div class="iframe-img">
-										<img src="images/home/iframe3.png" alt="" />
+									<div class="iframe-img" style="height: 100px">
+										<img th:src="@{/Frontend/images/gio4.jpg}" alt="" />
 									</div>
-									<div class="overlay-icon">
-										<i class="fa fa-play-circle-o"></i>
-									</div>
+
 								</a>
-								<p>Circle of Hands</p>
-								<h2>24 DEC 2014</h2>
+								<p>Giỏ trái cây </p>
+								<h2>April 2021</h2>
 							</div>
 						</div>
 
 						<div class="col-sm-3">
 							<div class="video-gallery text-center">
 								<a href="#">
-									<div class="iframe-img">
-										<img src="images/home/iframe4.png" alt="" />
+									<div class="iframe-img" style="height: 100px">
+										<img th:src="@{/Frontend/images/gio6.jpg}" alt="" />
 									</div>
-									<div class="overlay-icon">
-										<i class="fa fa-play-circle-o"></i>
-									</div>
+
 								</a>
-								<p>Circle of Hands</p>
-								<h2>24 DEC 2014</h2>
+								<p>Giỏ trái cây </p>
+								<h2>April 2021</h2>
 							</div>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="address">
-							<img src="images/home/map.png" alt="" />
-							<p>505 S Atlantic Ave Virginia Beach, VA(Virginia)</p>
 						</div>
 					</div>
 				</div>
@@ -102,11 +88,11 @@
 						<div class="single-widget">
 							<h2>Quock Shop</h2>
 							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">T-Shirt</a></li>
+								<li><a href="#">Fruit</a></li>
 								<li><a href="#">Mens</a></li>
 								<li><a href="#">Womens</a></li>
 								<li><a href="#">Gift Cards</a></li>
-								<li><a href="#">Shoes</a></li>
+
 							</ul>
 						</div>
 					</div>
@@ -151,23 +137,28 @@
 					</div>
 
 				</div>
+
+
+
 			</div>
+
+
 		</div>
 
-		<div class="footer-bottom">
-			<div class="container">
-				<div class="row">
-					<p class="pull-left">Copyright © 2013 E-SHOPPER Inc. All rights
-						reserved.</p>
-					<p class="pull-right">
-						Designed by <span><a target="_blank"
-											 href="http://www.themeum.com">Themeum</a></span>
-					</p>
-				</div>
-			</div>
-		</div>
 
 	</footer>
 	<!--/Footer-->
 
+</div>
+<div class="footer-bottom" style="background-color: white" >
+	<div class="container">
+		<div class="row" >
+			<p class="pull-left" style="background-color: white">LTNC 20202</p>
+			<p class="pull-right">
+				Designed by <span><a target="_blank"
+									 href="http://www.themeum.com">Nguyen Anh Tuan - Tong Quynh Phuong</a></span>
+			</p>
+		</div>
+	</div>
+</div>
 </div>
