--- a/src/main/resources/templates/admin/account/formUpdate.html
+++ b/src/main/resources/templates/admin/account/formUpdate.html
@@ -101,7 +101,7 @@
 											<label class="col-form-label" for="inputSuccess">
 											<i class="fas fa-check"></i> Mật Khẩu
 											</label> 
-												<input th:field="*{pw}" type="text"
+												<input th:field="*{password}" type="text"
 												class="form-control is-valid" id="inputSuccess"
 												placeholder="Enter ..." >
 										</div>
