--- a/src/main/resources/templates/admin/product/list.html
+++ b/src/main/resources/templates/admin/product/list.html
@@ -62,7 +62,7 @@
                 <tr th:each="product : ${list}">
                   <td th:text="${product.id}"></td>
                   <td th:text="${product.name}"></td>
-                  <td th:text="${product.price}"></td>
+                  <td th:text="${product.price_near}"></td>
                   <td th:text="${product.category}"></td>
                   <td th:text="${product.active}"></td>
                   <td>
