--- a/src/main/resources/templates/admin/product/formAdd.html
+++ b/src/main/resources/templates/admin/product/formAdd.html
@@ -60,15 +60,13 @@
 										<!-- End-->
 										
 										 <!-- Mô tả Sản phẩm -->
-										<div class="row">
-											<div class="col-sm-12">
-												<!-- textarea -->
-												<div class="form-group">
-													<label th:text="#{description}" ></label>
-													<textarea th:field="*{description}" class="form-control" rows="3"
-														placeholder="Enter ..."></textarea>
-												</div>
-											</div>
+										<div class="form-group">
+											<label class="col-form-label" for="inputSuccess">
+												<i class="fas fa-check"></i> Số lượng
+											</label>
+											<input th:field="*{so_luong}" type="text"
+												   class="form-control is-valid" id="inputSuccess"
+												   placeholder="Enter ..." >
 										</div>
 										 <!-- End-->
 
@@ -77,7 +75,7 @@
 											<label class="col-form-label" for="inputSuccess">
 											<i class="fas fa-check"></i> Giá Sản Phẩm
 											</label> 
-												<input th:field="*{price}" type="text"
+												<input th:field="*{price_near}" type="text"
 												class="form-control is-valid" id="inputSuccess"
 												placeholder="Enter ..." >
 										</div>
@@ -87,7 +85,7 @@
 										<div class="row">
 											<div class="col-sm-12">
 												<!-- radio -->
-												<label th:text="#{status}" ></label>
+												<label th:text="#{status}"></label>
 												<div class="form-group">
 													<div class="form-check">
 														<input class="form-check-input" type="radio" th:field="*{active}" value="1" >
@@ -114,6 +112,18 @@
 											</div>
 										</div>
 
+										<div class="row">
+											<div class="col-sm-12">
+												<!-- select -->
+												<div class="form-group">
+													<label>Nhà cung cấp</label>
+													<select class="form-control" th:field="*{provider}">
+														<option th:each="provider1 : ${listProvider}" th:text="${provider1.name}" th:value="${provider1.name}"></option>
+													</select>
+												</div>
+											</div>
+										</div>
+
 										<div class="form-group">
 											<label for="exampleInputFile">Ảnh sản phẩm</label>
 											<div class="input-group">
@@ -122,9 +132,7 @@
 												</div>									
 											</div>
 										</div>
-										
 										<input type="submit" value="Submit">
-
 									</form>
 								</div>
 								<!-- /.card-body -->
