--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <title>Login</title>
     <link th:href="@{/Frontend/css/login.css}" rel="stylesheet">
 </head>
-<body style="height: 300px">
+<body>
 <div class="div1">
     <h3 style="font-size: 17px; margin-left: 25px;">Please Sign In</h3>
 
