--- a/src/main/resources/templates/common/headeradmin.html
+++ b/src/main/resources/templates/common/headeradmin.html
@@ -122,7 +122,7 @@
           </li>
           <li class="nav-item has-treeview">
             <a th:href="@{/admin/QuanLyNhaCungCap/DanhSach}" class="nav-link">
-              <i class="nav-icon fas fa-tree"></i>
+              <i class="nav-icon fas fa-book"></i>
               <p>
                 Quản lý Nhà Cung Cấp
                 <i class="fas fa-angle-left right"></i>
@@ -131,7 +131,7 @@
           </li>
           <li class="nav-item has-treeview">
             <a th:href="@{/admin/QuanLyDonViTinh/DanhSach}" class="nav-link">
-              <i class="nav-icon fas fa-tree"></i>
+              <i class="nav-icon fas fa-circle"></i>
               <p>
                 Quản lý Đơn Vị Tính
                 <i class="fas fa-angle-left right"></i>
