--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
             <span style="font-size: 14px;">Remember Me</span>
             <br>
             <button class="in1 in2" type="submit">Login</button>
-            <br><a th:href="@{/register}">Đăng kí</a>
+            <br><a th:href="@{/register}"> Click here to Register </a>
         </div>
 
     </form>
