--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -3,12 +3,13 @@
     <div class="col-sm-3">
         <div class="left-sidebar">
             <h2>Brands</h2>
-            <div class="panel-group category-products" id="accordian">
+            <div class="panel-group category-products" id="accordian" style="height: 200px">
                 <!--category-productsr-->
                 <div th:each="category : ${listCategory}" class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a th:href="@{'/home/'+${category.name}}" th:text="${category.name}"></a>
+                            <li> <a th:href="@{'/home/'+${category.name}}" th:text="${category.name}"></a></li>
+
                         </h4>
                     </div>
                 </div>
