--- a/src/main/resources/templates/common/slider.html
+++ b/src/main/resources/templates/common/slider.html
@@ -1,6 +1,6 @@
-<div th:fragment="slider">
-    <section id="slider"><!--slider-->
-        <div id="demo" class="carousel slide" data-ride="carousel" style="padding-top: 0px;">
+
+    <section th:fragment="slider"><!--slider-->
+        <div id="demo" class="carousel slide" data-ride="carousel">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
@@ -12,13 +12,13 @@
                         </ul>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img th:src="@{/Frontend/images/slide4.jpg}" alt="Cheery">
+                                <img th:src="@{../static/images/slide4.jpg}" alt="Cheery">
                             </div>
                             <div class="carousel-item ">
-                                <img th:src="@{/Frontend/images/slide1.jpg}" alt="Nho">
+                                <img th:src="@{../static/images/slide1.jpg}" alt="Nho">
                             </div>
                             <div class="carousel-item">
-                                <img th:src="@{/Frontend/images/slide2.jpg}" alt="Nhotim">
+                                <img th:src="@{../static/images/slide2.jpg}" alt="Nhotim">
                             </div>
                         </div>
 
@@ -41,4 +41,3 @@
     </section><!--/slider-->
 
 
-</div>
