--- a/src/main/resources/templates/common/slider.html
+++ b/src/main/resources/templates/common/slider.html
@@ -11,14 +11,14 @@
                             <li data-target="#demo" data-slide-to="2"></li>
                         </ul>
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img th:src="@{../static/images/slide4.jpg}" alt="Cheery">
+                            <div class="carousel-item active ">
+                                <img th:src="@{/images/slide 4.jpg}" alt="Cheery">
                             </div>
                             <div class="carousel-item ">
-                                <img th:src="@{../static/images/slide1.jpg}" alt="Nho">
+                                <img th:src="@{/images/slide1.jpg}" alt="Nho">
                             </div>
                             <div class="carousel-item">
-                                <img th:src="@{../static/images/slide2.jpg}" alt="Nhotim">
+                                <img th:src="@{/images/slide2.jpg}" alt="Nhotim">
                             </div>
                         </div>
 
