--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,7 +36,7 @@
 <div th:replace="common/slider :: slider"></div>
 
 
-<section th:action="@{/home}" method="post">
+<section th:action="@{/home}" method="post" style="padding-top: 20px">
     <div class="container">
         <div class="col-sm-12">
             <div th:replace="common/menu :: menu"></div>
