--- a/src/main/resources/templates/user/viewDetailProduct.html
+++ b/src/main/resources/templates/user/viewDetailProduct.html
@@ -28,12 +28,14 @@
 	<div th:replace="common/header :: header"></div>
 	<div th:replace="common/slider :: slider"></div>
 	
-	<section>
-		<div class="container">
-			<div class="row">
-				<div th:replace="common/menu :: menu"></div>
-				
-				
+	<section style="padding-top: 20px">
+		<div class="container" >
+			<div class="col-sm-12">
+				<div th:replace="common/menu :: menu">
+
+				</div>
+
+
 				<div class="col-sm-9 padding-right">
 					<div class="product-details"><!--product-details-->
 						<div class="col-sm-5">
@@ -226,7 +228,7 @@
 	
 
   
-    <div th:replace="common/footer :: footer"></div>
+
 	<script th:src="@{/Frontend/js/jquery.js}"></script>
 	<script th:src="@{/Frontend/js/price-range.js}"></script>
 	<script th:src="@{/Frontend/js/jquery.scrollUp.min.js}"></script>
