--- a/src/main/resources/templates/user/viewDetailProduct.html
+++ b/src/main/resources/templates/user/viewDetailProduct.html
@@ -13,6 +13,21 @@
 <link th:href="@{/Frontend/css/animate.css}" rel="stylesheet">
 <link th:href="@{/Frontend/css/main.css}" rel="stylesheet">
 <link th:href="@{/Frontend/css/responsive.css}" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+			crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+			crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+			crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <link rel="shortcut icon" href="@{Frontend/images/ico/favicon.ico}">
 <link rel="apple-touch-icon-precomposed" sizes="144x144"
 	th:href="@{/Frontend/images/ico/apple-touch-icon-144-precomposed.png}">
@@ -28,7 +43,7 @@
 	<div th:replace="common/header :: header"></div>
 	<div th:replace="common/slider :: slider"></div>
 	
-	<section style="padding-top: 20px">
+	<section style="padding-top: 50px">
 		<div class="container" >
 			<div class="col-sm-12">
 				<div th:replace="common/menu :: menu">
